--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,109 @@ html{
 }
 body{
     background: #000;
-    margin: ;
+    margin: 0;
+    padding: 0;
+}
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 12px;
+    border-bottom: 3px solid #fff;
+    margin-top: 100px;
+    
+}
+.movie-card{
+    border: 2px solid #fff;
+    border-radius: 20px;
+}
+.movie-card img{
+    border-radius: 20px;
+}
+.del-icon{
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    background: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    border: none;
+    color: #ff0000;
+    font-size: 24px;
+}
+.form-bg{
+    background: url(../public/assets/images/form-bg.jpg);
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.uploadBox {
+	background: #fff;
+	border: 1px solid #2da44e;
+	box-shadow: 0px 2px 6px rgba(229, 235, 243, 0.5);
+	border-radius: 12px;
+	height: 40px;
+	padding: 12px;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	min-width: 140px;
+}
+
+
+
+
+.uploadBox .icon {
+	font-size: 25px;
+	display: inline-block;
+	margin-right: 10px;
+	color: #ff0000;
+}
+
+.uploadBox input[type="file"] {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	cursor: pointer;
+}
+.upload-img{
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+}
+.upload-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 100%;
+ 
+}
+form{
+    background: #ffffffba;
+    padding: 30px;
+    border-radius: 30px;
+}
+label{
+    font-size: 18px;
+    font-weight: 500;
+}
+input{
+    width: 100%;
+    border: none;
+    border-radius: 12px;
+    height: 46px;
+    outline: none;
 }
